--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "furls": "^0.2.0",
+    "furls": "0.11.0",
     "svg.js": "^2.6.6"
   },
   "devDependencies": {},
