--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "furls": "0.11.0",
-    "svg.js": "^2.6.6"
+    "@svgdotjs/svg.js": "^3.2.4",
+    "font-webapp": "^0.5.1",
+    "furls": "0.11.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
